# R-type-Clone

./: .gitignore  AGENTS.md  Build.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  GEMINI.md  README.md  app.cpp  app.h  buffer.cpp  buffer.h  build.py  build.sh  input.cpp  input.h  main.cpp  platform.cpp  platform.h  shader.cpp  shader.h  shader.vert  shell.html  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  high.yml  low.yml  medium.yml
.github/docker/: Dockerfile
.github/workflows/: ci.yml  create-labels.yml  docker-image.yml
assets/config/: client.json  engine.json  local.json  server.json  test_minimal.json
assets/scripts/: ecs_compat.lua
assets/scripts/breakout/: GameLoop.lua
assets/scripts/breakout/systems/: GameLogicSystem.lua  InputSystem.lua  PhysicsSystem.lua  RenderSystem.lua
assets/scripts/platformer/: Components.lua  Main.lua
assets/scripts/platformer/levels/: Level1.lua  Level2.lua  Level3.lua
assets/scripts/platformer/systems/: CameraSystem.lua  CollisionSystem.lua  GameLogicSystem.lua  PhysicSystem.lua  PlayerSystem.lua  RenderSystem.lua
assets/scripts/space-shooter/: Game.lua  GameClient.lua  GameLoop.lua  GameServer.lua  Main.lua  config.lua  spawns.lua
assets/scripts/space-shooter/components/: Components.lua
assets/scripts/space-shooter/levels/: Level-1.lua  Level-2.lua  Level-3.lua  Level-4.lua  Level-5.lua
assets/scripts/space-shooter/systems/: AnimationSystem.lua  BackgroundSystem.lua  BonusSystem.lua  CollisionSystem.lua  EnemySystem.lua  FollowSystem.lua  GameStateManager.lua  HitFlashSystem.lua  InputSystem.lua  LevelManager.lua  LifeSystem.lua  MenuSystem.lua  NetworkSystem.lua  ParticleSystem.lua  PhysicSystem.lua  PlayerSystem.lua  RenderSystem.lua  ScoreSystem.lua  WinSystem.lua
assets/scripts/sprite-demo/: Components.lua  Game.lua  RenderSystem.lua
assets/scripts/test-minigame/: CameraSystem.lua  Game.lua  PhysicSystem.lua  WinSystem.lua
assets/scripts/test-sound/: SoundTest.lua
assets/sounds/: README.md
cmake/: Dependencies.cmake
definitions/: game_api.lua
docs/: ARCHITECTURE.md  CHANNELS.md  CONTRIBUTING.md  CROSS_PLATFORM_GUIDE.md  INSTALL.md  NETWORK_ARCHITECTURE.md  NETWORK_PROTOCOL.md  NetworkArchitecture.md  OVERVIEW.md  QUICKSTART.md  SOLO_MULTIPLAYER_PARITY_AUDIT.md  TODO.md  TODO_FU.md
docs/assets/: README.md
docs/rfc/: RFC-001-BINARY-PROTOCOL.md
poc-module-architecture/: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
poc-module-architecture/assets/scripts/ecs/: CameraSystem.lua  CollisionSystem.lua  Components.lua  Game.lua  PhysicSystem.lua  PlayerInputSystem.lua  PlayerSystem.lua  RenderSystem.lua
poc-module-architecture/assets/scripts/space-shooter/: Game.lua
poc-module-architecture/assets/scripts/systems/: MovingCube.lua
poc-module-architecture/assets/scripts/test-minigame/: CollisionSystem.lua  Components.lua  PlayerSystem.lua  RenderSystem.lua
poc-module-architecture/docs/: modules-messages.txt  modulesystem.txt  project-overview.txt
poc-module-architecture/scripts/: build.ps1  firstbuild.ps1
poc-module-architecture/src/engine/app/: AApplication.cpp
poc-module-architecture/src/engine/modules/: AModule.cpp
poc-module-architecture/src/engine/modules/3DRenderer/GLEW/: CMakeLists.txt  GLEWRenderer.cpp  GLEWRenderer.hpp
poc-module-architecture/src/engine/modules/3DSceneManager/EngineSceneManager/: CMakeLists.txt  EngineSceneManager.cpp  EngineSceneManager.hpp
poc-module-architecture/src/engine/modulesManager/: AModulesManager.cpp
poc-module-architecture/src/engine/types/: rect.hpp  vector.hpp
poc-module-architecture/src/game/: CMakeLists.txt  ModulesManager.hpp  Rtype.cpp  Rtype.hpp  main.cpp
scripts/: build.ps1  build_gameengine.sh  firstbuild.ps1  gen_lua_api.pl
src/engine/app/: AApplication.cpp  AApplication.hpp  IApplication.hpp
src/engine/core/: CMakeLists.txt  GameEngine.cpp  GameEngine.hpp  Logger.cpp  Logger.hpp  test_local_mode.cpp
src/engine/modules/: AModule.cpp  AModule.hpp  IModule.hpp
src/engine/modules/ECSManager/LuaECSManager/: CMakeLists.txt  LuaBindings.cpp  LuaECSManager.cpp  LuaECSManager.hpp  LuaSerialization.cpp  MsgPackUtils.cpp  MsgPackUtils.hpp
src/engine/modules/ECSManager/LuaECSManager/tests/: CMakeLists.txt  LuaECSManagerBindingTests.cpp  LuaECSManagerLifetimeTests.cpp
src/engine/modules/ECSSavesManager/BasicECSSavesManager/: BasicECSSavesManager.cpp  BasicECSSavesManager.hpp  CMakeLists.txt
src/engine/modules/ECSSavesManager/ECSSavesManager/: CMakeLists.txt  ECSSavesManager.cpp
src/engine/modules/LuaECS/: CMakeLists.txt  (+2 more)
src/engine/modules/NetworkManager/: CMakeLists.txt  INetworkManager.hpp  NetworkManager.cpp  NetworkManager.hpp
src/engine/modules/NetworkManager/tests/: CMakeLists.txt  NetworkManagerTests.cpp
src/engine/modules/PhysicEngine/Bullet/: BulletBodyManager.cpp  BulletBodyManager.hpp  BulletPhysicEngine.cpp  BulletPhysicEngine.hpp  BulletWorld.cpp  BulletWorld.hpp  CMakeLists.txt
src/engine/modules/Renderer/GLEW/: CMakeLists.txt  GLEWRenderer.cpp  GLEWRenderer.hpp
src/engine/modules/Renderer/GLEWSFML/: CMakeLists.txt  GLEWSFMLRenderer.cpp  GLEWSFMLRenderer.hpp  ParticleSystem.cpp  ParticleSystem.hpp  RenderStructs.hpp  ResourceManager.cpp  ResourceManager.hpp
src/engine/modules/SoundManager/SFML/: CMakeLists.txt  SFMLSoundManager.cpp  SFMLSoundManager.hpp
src/engine/modules/WindowManager/SFML/: CMakeLists.txt  KeysMap.hpp  SFMLWindowManager.cpp  SFMLWindowManager.hpp
src/engine/modulesManager/: AModulesManager.cpp  AModulesManager.hpp  IModulesManager.hpp  ModulesManager.cpp  ModulesManager.hpp
src/engine/types/: Collider.hpp  Mesh.hpp  Transform.hpp  Vec3.hpp  ecs.hpp
src/game/: CMakeLists.txt  Rtype.cpp  Rtype.hpp  main.cpp
src/game/client/: RTypeClient.cpp  RTypeClient.hpp  main.cpp  main_engine.cpp
src/game/server/: RTypeServer.cpp  RTypeServer.hpp  main.cpp
src/platformer/: CMakeLists.txt  PlatformerGame.cpp  PlatformerGame.hpp  main.cpp
src/test_sound/: CMakeLists.txt  main.cpp
(+24 files in other folders)
